@@ -10,6 +10,7 @@
  */
 
 #include "widgets/layer-selector.h"
+#include "widgets/document-tree-model.h"
 #include "desktop.h"
 
 namespace Inkscape {
@@ -21,6 +22,7 @@ LayerSelector::LayerSelector(SPDesktop *desktop)
     pack_start(_lock_button, Gtk::PACK_SHRINK);
     pack_start(_hide_button, Gtk::PACK_SHRINK);
     pack_start(_selector, Gtk::PACK_EXPAND_WIDGET);
+
     setDesktop(desktop);
 }
 
@@ -39,7 +41,7 @@ gboolean detach(SPView *view, LayerSelector *selector) {
 
 void LayerSelector::setDesktop(SPDesktop *desktop) {
     if (_desktop) {
-        g_signal_handlers_disconnect_by_func(_desktop, (gpointer)detach, this);
+        g_signal_handlers_disconnect_by_func(_desktop, (gpointer)&detach, this);
     }
     if (desktop) {
         // TODO we need a different signal for this..
